// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button Outline 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <button
    className="sc-bdfBwQ sc-hKgILt  iGvDCY"
  >
    Click
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Primary 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <button
    className="sc-bdfBwQ sc-hKgILt  hxYeM"
  >
    Click
  </button>
</div>
`;

exports[`Storyshots Atoms/Layout Container 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <div
    className="sc-bdfBwQ sc-gsTCUz bFhuNW kNNlrj"
    height="100vh"
  >
    This is a responsive container
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout Grid 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm bFhuNW dYmuJF"
    height="100vh"
  >
    This is a responsive Grid
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/Heading Heading 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <h1
    className="sc-bdfBwQ sc-eCssSg sc-jSgupP gYDVUp kVzVMq heeOhy"
    color="text.primary"
  >
    Mountain UI library
  </h1>
</div>
`;

exports[`Storyshots Atoms/Typography/Paragraph Paragraph 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <p
    className="sc-bdfBwQ sc-eCssSg sc-gKsewC sc-iBPRYJ  kVzVMq"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
  </p>
</div>
`;

exports[`Storyshots Atoms/Typography/Text Text 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <span
    className="sc-bdfBwQ sc-eCssSg sc-gKsewC  kVzVMq"
  >
    Mountain UI library
  </span>
</div>
`;
